--- a/index.html
+++ b/index.html
@@ -12,52 +12,57 @@
         }
         h1 {
             text-align: center;
-            margin: 20px 0;
-            color: #1a5276; /* Dark blue color for the title */
+            margin: 40px 0;
+            color: #1a5276;
+            font-size: 36px;
         }
         label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 15px;
+            font-size: 24px;
         }
         input {
-            padding: 5px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
+            padding: 15px;
+            margin-bottom: 20px;
+            border: 3px solid #ccc;
+            border-radius: 7px;
+            font-size: 22px;
         }
         button {
-            padding: 10px 20px;
+            padding: 20px 40px;
             background-color: #007bff;
             color: #fff;
             border: none;
-            border-radius: 3px;
+            border-radius: 7px;
             cursor: pointer;
+            font-size: 24px;
         }
         #result {
-            margin-top: 20px;
+            margin-top: 40px;
             text-align: center;
-            font-size: 18px;
+            font-size: 28px;
         }
         .error {
             color: red;
             text-align: center;
+            font-size: 24px;
         }
 
         /* Add a blue color border for the dd mm yyyy section */
         #birthdate {
-            border: 2px solid #007bff;
-            padding: 5px;
-            border-radius: 3px;
+            border: 4px solid #007bff;
+            padding: 15px;
+            border-radius: 7px;
         }
 
         /* Add a blue color border for the whole app */
         .container {
-            border: 2px solid #007bff;
-            padding: 20px;
-            max-width: 400px;
+            border: 4px solid #007bff;
+            padding: 40px;
+            max-width: 600px;
             margin: 0 auto;
             background-color: #fff;
-            border-radius: 5px;
+            border-radius: 15px;
         }
     </style>
 </head>
