--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
+            background-image: url(https://images.pexels.com/photos/346529/pexels-photo-346529.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+            background-size: cover; /* Adjust to your preference */
+            background-repeat: no-repeat;
+            background-attachment: fixed; /* Keeps the background image fixed while scrolling */
             margin: 0;
             padding: 0;
+            color: #333;
         }
         h1 {
             text-align: center;
