--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url(https://images.pexels.com/photos/346529/pexels-photo-346529.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+            background-image: url(https://media.istockphoto.com/id/1214224199/photo/united-states-of-america-at-night-planet-earth-seen-from-space.jpg?s=2048x2048&w=is&k=20&c=Dy0ioI29nygw_teYTLcOxxStuvXHNahUyBUzEMZTMjc=);
             background-size: cover; /* Adjust to your preference */
             background-repeat: no-repeat;
             background-attachment: fixed; /* Keeps the background image fixed while scrolling */
